<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/medicine_registration_title"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- 登録ラベル -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="登録"
            android:textSize="23sp" />

        <!-- お薬名入力 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/medicine_name_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/medicine_name_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="おくすり名"
                android:textSize="20sp"
                android:gravity="center_vertical" />
        </LinearLayout>

        <!-- 服用回数 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/dose_count_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/doscount_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="(１日)"
                android:inputType="number"
                android:textSize="20sp"
                android:gravity="center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dose_count_labelkai"
                android:textSize="20sp"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/picker_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/picker_button" />

        </LinearLayout>

        <!-- タイムピッカーを表示するためのLinearLayout -->
        <LinearLayout
            android:id="@+id/time_picker_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"/>

        <!-- 服用量 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/dosage_label"
                android:textSize="20sp"
                android:gravity="center_vertical" />

            <EditText
                android:id="@+id/dosage_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="(１回)"
                android:textSize="20sp"
                android:gravity="center_vertical" />

            <Spinner
                android:id="@+id/dosage_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center_vertical" />
        </LinearLayout>


        <!-- 食前・食後 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="服薬タイミング"
                android:textSize="20sp"
                android:gravity="center_vertical" />

            <Spinner
                android:id="@+id/MDtiming_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:entries="@array/MDtiming"
                android:padding="8dp"
                android:gravity="center_vertical" />
        </LinearLayout>


        <!-- 服用期間 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/use_period_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/medication_startdate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:hint="開始日" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="～"
                android:textSize="23sp" />

            <EditText
                android:id="@+id/medication_enddate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:hint="終了日" />
        </LinearLayout>

        <!-- メモ -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memo_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/memo_edit"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#E0E0E0"
                android:gravity="top|left"
                android:hint="メモを入力してください"
                android:textSize="20sp" />
        </LinearLayout>

        <!-- 通知 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:paddingStart="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="通知"
                android:textSize="20sp"
                android:gravity="center_vertical" />

            <Spinner
                android:id="@+id/notification_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:entries="@array/notification_options"
                android:padding="8dp"
                android:gravity="center_vertical" />
        </LinearLayout>

        <!-- カメラアイコンと削除アイコンを横並びに配置 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <!-- カメラアイコンとテキスト -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="97dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/camera_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/camera_icon_description"
                    android:focusable="true"
                    android:src="@drawable/ic_camera" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="写真を撮る"
                    android:textSize="14sp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <!-- 追加: 写真を選択するアイコンとテキスト -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginStart="16dp">

                <ImageView
                    android:id="@+id/select_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/select_icon_description"
                    android:src="@drawable/ic_select_photo_foreground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="写真を選択"
                    android:textSize="14sp"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <!-- 削除アイコンとテキスト -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginStart="16dp">

                <ImageView
                    android:id="@+id/delete_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/delete_icon_description"
                    android:src="@drawable/ic_delete_foreground" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="写真を削除"
                    android:textSize="14sp"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>

        <!-- 撮影した写真を表示するImageView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/photo_image_view"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:background="#E0E0E0"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <!-- 登録・キャンセルボタン -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_register" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/no_cancel" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>