<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="70dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- タイトル -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:text="体調編集画面"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- 日付とカレンダーアイコンを並べて表示 -->

        <!-- 下線を追加 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dateTextView_ud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="本日 : "
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/calendarIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:contentDescription="カレンダーアイコン"
                android:src="@drawable/ic_calendar" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/darker_gray" />

        <!-- 編集-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingTop="30dp"
            android:paddingBottom="5dp"
            android:text="編集"
            android:textSize="23sp" />
        <TextView
            android:id="@+id/beforeDateTextView_ud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="登録日 : "
            android:textColor= "#FD7AC4"
            android:textSize="14sp" />
    </LinearLayout>


        <!-- 下線を追加 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray" />

        <!-- 体温入力 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/temperature"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/tempEditText_ud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "体温"
                android:inputType="numberDecimal"
                android:padding="15dp"
                android:textSize="20sp"
                android:focusableInTouchMode="true"/>
        </LinearLayout>

        <!-- 体重入力 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/weight"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/weightEditText_ud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="体重"
                android:padding="15dp"
                android:textSize="20sp"
                android:focusableInTouchMode="true"/>
        </LinearLayout>


        <!-- 血圧入力 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/blood_pressure"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/bpUpEditText_ud"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:hint="血圧（上）"
                android:inputType="number"
                android:maxLength="3"
                android:padding="15dp"
                android:textSize="20sp"
                android:focusableInTouchMode="true"/>
            <EditText
                android:id="@+id/bpDownEditText_ud"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:hint="血圧（下）"
                android:inputType="number"
                android:maxLength="3"
                android:padding="15dp"
                android:textSize="20sp"
                android:focusableInTouchMode="true"/>
        </LinearLayout>


        <!-- 血糖値 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/blood_sugar"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/HCtiming_spinner_ud"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:entries="@array/HCtiming"
                android:padding="8dp"
                android:gravity="center_vertical" />

            <EditText
                android:id="@+id/sugarEditText_ud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="血糖値"
                android:maxLength="3"
                android:inputType="number"
                android:padding="15dp"
                android:textSize="20sp"
                android:focusableInTouchMode="true"/>
        </LinearLayout>

        <!-- ボタンエリア -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/registerButton_ud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="更新" />

            <Button
                android:id="@+id/deleteButton_ud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/da_cancel" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>